<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9100"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <ImageView
        android:id="@+id/ImageViewMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/descripcion"
        android:src="@drawable/ico"
         />
    <TextView
        android:text="@string/User"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        style="@style/margins"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/Nombre"
        />
    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/margins"
        android:textAlignment="center"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:text="@string/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                style="@style/margins"
                android:layout_weight="2"
                />
            <Spinner
                android:id="@+id/Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/margins"
                android:layout_weight="3"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/fechaBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/margins"
                android:onClick="setFecha"
                android:text="@string/date"
                />
            <EditText
                android:id="@+id/getFecha"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/margins"
                android:textColor="@android:color/black"
                android:hint="@string/fechaNacimiento"
                android:inputType="date"
                android:enabled="false"
                />
        </LinearLayout>

        <Button
            android:id="@+id/Listo"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:onClick="saveButton"
            />
    </LinearLayout>

</ScrollView>