<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9100"
    tools:context=".SecondUser">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/ImageViewMain"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/descripcion"
            android:src="@drawable/ico" />
        <TextView
            android:text="@string/UserTwo"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            style="@style/margins"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/txtName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/Nombre"

            />
        <EditText
            android:id="@+id/txtLastName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/margins"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/apellido"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:text="@string/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                style="@style/margins"
                android:layout_weight="2"
                />
        <Spinner
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/margins"
            android:layout_weight="3"
            />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/fechaBtn1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/margins"
                android:onClick="setFecha"
                android:text="@string/date"
                />
            <EditText
                android:id="@+id/getFechaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                style="@style/margins"
                android:hint="@string/fechaNacimiento"
                android:enabled="false"
                />
        </LinearLayout>

        <Button
            android:id="@+id/Listo1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:onClick="saveAndSend"
            />
    </LinearLayout>

</ScrollView>