<?xml version="1.0" encoding="utf-8"?>
<!-- Parent View (Scroll) -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".CalculateAge">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView
            android:text="@string/Diferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/User"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                />
            <TextView
                android:text="@string/UserTwo"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
          <ImageView
              android:id="@+id/ImageViewMainUser1"
              android:layout_width="150dp"
              android:layout_height="200dp"
              android:layout_weight="1"
              style="@style/margins"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:layout_gravity="center"
              android:contentDescription="@string/descripcion"
              android:src="@drawable/ico"
              />
            <ImageView
                android:id="@+id/ImageViewMainUser2"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/descripcion"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                style="@style/margins"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ico"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
            <TextView
                android:text="@string/UserString"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/nameUser1"
                android:text="@string/Nombre"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                />
                <TextView
                    android:id="@+id/lastNameUser1"
                    android:text="@string/apellido"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    />
            <TextView
                android:id="@+id/ageUser1"
                android:text="@string/edad"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="18sp"
            />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                >
                <TextView
                    android:text="@string/UserString"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/nameUser2"
                    android:text="@string/Nombre"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/lastNameUser2"
                    android:text="@string/apellido"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/ageUser2"
                    android:text="@string/edad"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e91e63"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/final_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                />
        </LinearLayout>


    </LinearLayout>

</ScrollView>